2008-10-22  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-border.c (draw_none_line), (draw_dotted_line),
	(draw_dashed_line):
	* examples/example-1.c:
	Fix drawing of dotted and dashed lines.

2008-10-22  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-selector-group.c (ccss_selector_group_new),
	(ccss_selector_group_free), (ccss_selector_group_add_selector),
	(ccss_selector_group_merge), (ccss_selector_group_merge_base),
	(ccss_selector_group_query_collect),
	(ccss_selector_group_query_apply), (ccss_selector_group_apply),
	(ccss_selector_group_apply_type), (ccss_selector_group_dump):
	Use GHashTable instead of GTree so it's possible to do queue-based iteration over multiple selector groups.

2008-10-20  Robert Staudinger  <robsta@gnome.org>

	* TODO: update.

	* ccss/ccss-background.h: delete unused prototypes.

2008-10-20  Robert Staudinger  <robsta@gnome.org>

	* TODO: remember how to fix complex universal selectors.

	* ccss/ccss-selector-group.c (traverse_merge), (traverse_query),
	(traverse_match), (traverse_dump), (ccss_selector_group_dump):
	* ccss/ccss-style.c:
	Iterate GSList using `for' loops.

2008-10-17  Robert Staudinger  <robsta@gnome.org>

	* configure.in: post-release version bump.

2008-10-17  Robert Staudinger  <robsta@gnome.org>

	* HACKING:
	* NEWS:
	* README:
	* TODO:
	* ccss/ccss-style.c:
	* configure.in:
	Prepare 0.1 release.

2008-10-17  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-style.c:
	* ccss/ccss-style.h:
	* ccss/ccss.sym.in:
	Remove CSS-engine-specific API, now that style property interface is in place.

2008-10-16  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-style-priv.h:
	* ccss/ccss-style.h:
	* ccss/ccss.c:
	* examples/example-1.c (main):
	Fix warnings.

2008-10-16  Robert Staudinger  <robsta@gnome.org>

	* ccss/ccss-block.c (ccss_block_new_border_color),
	(ccss_block_new_border_style), (ccss_block_new_border_width),
	(ccss_block_new_border_radius), (ccss_block_get_border_color),