@@ -41,9 +41,8 @@ GSList const *	ccss_selector_group_get_dangling_selectors	(ccss_selector_group_t
 void		ccss_selector_group_clear_dangling_selectors	(ccss_selector_group_t *self);
 
 bool ccss_selector_group_query_collect (ccss_selector_group_t const *self, 
-				       ccss_node_t const *node, 
-				       ccss_selector_group_t *result_group,
-				       bool as_base);
+				       ccss_node_t const *node, bool as_base,
+				       ccss_selector_group_t *result_group);
 bool ccss_selector_group_query_apply (ccss_selector_group_t const *self, 
 			             ccss_node_t const *node, ccss_style_t *style);
 
